syntax = "proto3";

option csharp_namespace = "ApiGetaway";

import "google/protobuf/wrappers.proto";

package team;

service TeamService {
  rpc UpdateTeam (UpdateTeamsRequest) returns (VoidTeamReply);
  rpc LeaveTeam (LeaveTeamRequst) returns (VoidTeamReply);
  rpc CreateTeam (CreateTeamRequest) returns (CreateTeamReply);
  rpc GetListTeams (GetListTeamsRequest) returns (ListTeamsReply);
  rpc AddUserInTeam (AddUserTeamRequest) returns (VoidTeamReply);
  rpc GetUsers (GetUsersRequest) returns (GetUsersReply);
}

message VoidTeamReply{}



message GetUsersRequest{
    string team_tag = 1;
}


message GetUsersReply{
    repeated string users_tags= 1;
}


message TeamModel{
     int32 id_team = 1;
     string name = 2;
     string tag_team = 4;
     string tag_lead = 3;
}


message CreateTeamReply{
     int32 id_team = 1;
     string name = 2;
     string tag_lead = 3;
     string tag_team = 4;
}


message GetListTeamsRequest{
    string user_tag = 1;
}

message ListTeamsReply{
    repeated TeamModel teams = 1;
}

message LeaveTeamRequst{
    string team_tag = 1;
    string user_tag = 2;
}


message CreateTeamRequest{
     string user_tag = 1;
     string name = 2;
}

message AddUserTeamRequest{
    string team_tag = 1;
    string user_tag = 2;
}


message UpdateTeamsRequest{
     string team_tag = 1;
     google.protobuf.StringValue name = 2;
     google.protobuf.StringValue tag_lead = 3;
}

