syntax = "proto3";

option csharp_namespace = "ApiGetaway";

package user;

service UserService {
  rpc UpdateUser (UpdateUserRequest) returns (UserVoidReply);
  rpc DeleteUser (DeleteUserRequest) returns (UserVoidReply);
  rpc GetUserById (GetUserByIdRequest) returns (GetUserReply);
  rpc GetUserByTag (GetUserByTagRequest) returns (GetUserReply);

}


message GetUserByTagRequest{
    string tag = 1;
}


message GetUserByIdRequest{
    int32 user_id = 1;
}


message UserVoidReply{}



message UpdateUserRequest{
     int32 id = 1;
     string first_name = 2;
     string second_name = 3;
     string last_name = 4;
     string phone = 5;
     string email = 6;
}

message DeleteUserRequest{
    int32 id = 1;
}

message CreateUserRequest{
     string first_name = 1;
     string second_name = 2;
     string last_name = 3;
     string phone = 4;
     string email = 5;
     string password = 6;
}


message GetUserReply {
     string first_name = 1;
     string second_name = 2;
     string last_name = 3;
     string phone = 4;
     string email = 5;
     string tag = 6;
}
